Semana 7: prácticas, modificación ejemplos