@@ -4,6 +4,9 @@ import javax.xml.ws.Endpoint;
 
 public class Publicador {
 
+	// Problema JAXWS y JDK17
+	// --add-opens java.base/java.lang=ALL-UNNAMED
+	
 	public static void main(String[] args) {
 		
 		Endpoint.publish(
